--- a/orders/templates/orders/base.html
+++ b/orders/templates/orders/base.html
@@ -5,9 +5,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'orders/styles.css' %}" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>  
     <title>{% block title %}{% endblock %}</title>
   </head>
-  <body>
-    {% block body %} {% endblock %}
+  <body style="background-color: #010101;">
+    <div class="container-fluid">
+        <div>
+            <p class="top">CS50 Project 3</p>
+        </div>  
+        <div class=' mx-auto w-10 p-3'>
+            <img src="{% static 'orders/food-3309418_1920.jpg' %}">
+            {% block body %} {% endblock %}
+        </div>
+    </div>
   </body>
 </html>
