--- a/orders/templates/orders/base.html
+++ b/orders/templates/orders/base.html
@@ -1,25 +1,25 @@
 {% load static %}
 
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'orders/styles.css' %}" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>  
-    <title>{% block title %}{% endblock %}</title>
-  </head>
-  <body style="background-color: #010101;">
-    <div class="container-fluid">
-        <div>
-            <p class="top">CS50 Project 3</p>
-        </div>  
-        <div class=' mx-auto w-10 p-3'>
-            <img src="{% static 'orders/food-3309418_1920.jpg' %}">
-            {% block body %} {% endblock %}
-        </div>
+<head>
+  <title>{% block title %}{% endblock %}</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="{% static 'orders/style.css' %}">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="{% static 'orders/static.js' %}"></script>
+</head>
+<body style="background-color: #121212; height: 100%;">
+    <div class="jumbotron text-center" style="margin: 0px;">
+      <h1>CS50 PROJECT3</h1>
+      <p><em>Pizza Web Application</em></p>
     </div>
+
+    {% block body %} {% endblock %}
+
+
   </body>
 </html>
