--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -1,34 +1,134 @@
 {% extends "orders/base.html" %}
 
+{% load static %}
 {% block title %}
     Orders
 {% endblock %}
 
+
+
 {% block body %}
-<div class="toptext">
-    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lobortis lacus imperdiet erat euismod imperdiet. Quisque a tempus massa, et feugiat arcu. In vel augue lectus. Duis suscipit feugiat eleifend. Mauris risus tellus, dignissim in lectus sed, venenatis interdum magna. Sed auctor tempor ligula ut vulputate. Nunc ultricies suscipit arcu non tempus.
-        Pellentesque euismod turpis sed lacus pellentesque, eget volutpat urna vestibulum. Sed pulvinar egestas leo at faucibus. Cras non tellus et dui interdum pretium et vel est. Nam vel volutpat ligula, ac tempus ex. Fusce at convallis tortor, eget euismod lectus. Quisque tincidunt orci id eros posuere, vel eleifend metus pellentesque. Donec non nulla et tellus cursus ultricies. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus et semper metus. Nulla facilisi. Praesent bibendum mauris nunc, ac lacinia nisi tempor eget. Ut faucibus vitae dui a aliquam. In ac nisl nec tortor feugiat tempor eget et libero. Ut augue tortor, dignissim vitae tempus non, ultrices at erat.</p>
-</div>
-<div style="color: white;" class="centered">
-    {% if message %}
-        <div class="alert alert-success" role="alert">
-            {{ message }}
-        </div>
-    {% endif %}
-    <form method="POST">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="exampleInputLabel1" style="font-size: 20px;">Username</label>
-            <input type="text" class="form-control" id="exampleInputLabel1" placeholder="Enter username">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1" style="font-size: 20px;">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <div class='text-center m-2'>
-        No account yet? <a href="{% url 'register' %}">Sign In</a>
+
+{% include 'orders/status.html' %}
+<nav class="navbar navbar-inverse" style="border-radius: 0px;" >
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-center">
+        <li class="active"><a href="#Home">HOME</a></li>
+        <li><a href="#MENU">MENU</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="{% url 'logout' %}">LOGOUT</a></li>
+      </ul>
     </div>
+  </nav>
+
+<div id="Home">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+  
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="{% static 'orders/food-3309418_1920.jpg' %}">
+        <div class="carousel-caption">
+          <h1>BARBECUE</h1>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="{% static 'orders/2.jpg' %}" alt="Chicago">
+        <div class="carousel-caption">
+          <h1>TRY THE BEST TASTE IN TOWN</h1>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="{% static 'orders/3.jpg' %}" alt="Los Angeles">
+        <div class="carousel-caption">
+          <h1>PEPPERONI</h1>
+        </div>
+      </div>
+    </div>
+  
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
+
+<br>
+<br>
+<br>
+
+<div class="menu text-center" id="MENU"><h1 class="font-weight-bold">MENU</h1></div>
+<div class="container-fluid" style="height: 540px;">    
+    <div class="row">
+     
+      <div class="col-sm-4"> 
+        <div>
+          <div class="centered menutext text-center">PIZZAS</div>
+          <div class="menupanel panel-body"><a href="{% url 'pizza' %}"><img src="{% static 'orders/4.jpg' %}" class="menuelement img-responsive" style="width:100%;" alt="Image"></a></div>
+        </div>
+      </div>
+     
+     <a href="{% url 'salad' %}">
+      <div class="col-sm-4"> 
+        <div class="menupanel">
+          <div class="centered menutext text-center">SALADS</div>
+          <div class="panel-body"><img src="{% static 'orders/5.jpg' %}" class="menuelement img-responsive" style="width:100%" alt="Image"></div>
+        </div>
+      </div>
+     </a>
+     <a href="{% url 'dinner_platter' %}">
+      <div class="col-sm-4"> 
+        <div class="menupanel">
+          <div class="centered menutext text-center">DINNER PLATTERS</div>
+          <div class="panel-body"><img src="{% static 'orders/6.jpg' %}" class="menuelement img-responsive" style="width:100%" alt="Image"></div>
+        </div>
+      </div>
+    </a>
+    </div>
+  </div><br>
+  
+  <div class="container-fluid" >    
+    <div class="row">
+     <a href="{% url 'pasta' %}">
+      <div class="col-sm-4">
+        <div class="menupanel">
+          <div class="centered menutext text-center">PASTAS</div>
+          <div class="panel-body"><img src="{% static 'orders/7.jpg' %}" class="menuelement img-responsive" style="width:100%" alt="Image"></div>
+        </div>
+      </div>
+     </a>
+     <a href="{% url 'sub' %}">
+      <div class="col-sm-4"> 
+        <div class="menupanel">
+          <div class="centered menutext text-center">SUBS</div>
+          <div class="panel-body"><img src="{% static 'orders/8.jpg' %}" class="menuelement img-responsive" style="width:100%" alt="Image"></div>
+        </div>
+      </div>
+    </a>
+    <a href="{% url 'topping' %}">
+      <div class="col-sm-4"> 
+        <div class="menupanel">
+          <div class="centered menutext text-center">TOPPINGS</div>
+          <div class="panel-body"><img src="{% static 'orders/9.jpg' %}" class="menuelement img-responsive" style="width:100%" alt="Image"></div>
+        </div>
+      </div>
+    </a>
+    </div>
+  </div><br><br>
+
 {% endblock %}
