--- a/orders/templates/orders/my_orders.html
+++ b/orders/templates/orders/my_orders.html
@@ -9,6 +9,11 @@
 
 {% block body %}
 {% include 'orders/status.html' %}
+
+<div class="collapse navbar-collapse" style="color: white; text-align: end; padding: 15px;" id="myNavbar">
+    <span><a href="{% url 'index' %}">BACK TO MAIN PAGE</a></span>
+</div>
+
 <div style="display: flex; justify-content: center; align-items: center;">
     <div class="row">
         <div class="col-md-6">
