--- a/orders/templates/orders/pizzas.html
+++ b/orders/templates/orders/pizzas.html
@@ -4,13 +4,17 @@
 {% block title %}
     Pizza
 {% endblock %}
-s
+
 
 {% block body %}
 {% include 'orders/status.html' %}
+<div class="collapse navbar-collapse" style="color: white; text-align: end; padding: 15px;" id="myNavbar">
+    <span><a class="backButton" href="{% url 'index' %}">BACK TO MAIN PAGE</a></span>
+</div>
+
 <div style="display: flex; justify-content: center; align-items: center;">
-<div class="row">
-	<div class="col-md-6">
+<div class="row text-center">
+	<div class="col-md-10">
 		<div class="card card-body">
             <h3 class="text-center" style="color: white; text-align: center;">REGULAR PIZZA</h3>
             <table class="table table-sm" style="color: white;">
@@ -18,7 +22,8 @@ s
 					<th>Name</th>
                     <th>Price (Small)</th>
                     <th></th>
-                    <th>Price (Large)</th>
+					<th>Price (Large)</th>
+					<th></th>
 				</tr>
 
 				{% for pizza in regular_pizzas %}
@@ -38,7 +43,7 @@ s
 </div>
 <div style="display: flex; justify-content: center; align-items: center;">
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-10">
 		<div class="card card-body">
             <h3 class="text-center" style="color: white; text-align: center;">SICILIAN PIZZA</h3>
             <table class="table table-sm" style="color: white;">
@@ -46,7 +51,8 @@ s
 					<th>Name</th>
                     <th>Price (Small)</th>
                     <th></th>
-                    <th>Price (Large)</th>
+					<th>Price (Large)</th>
+					<th></th>
 				</tr>
 
 				{% for pizza in sicilian_pizzas %}
